# video-translation-agent

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  config.yaml  example.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  video_translation_agent_technical_spec.md
apps/api/: __init__.py  main.py
apps/cli/: main.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/scripts/: e2e-local-console.mjs
apps/web/src/: App.tsx  api.ts  i18n.ts  index.css  types.ts  useJobPolling.ts
examples/mvp/: source.srt  vtl.config.json
reports/: frontend-browser-test-report.md  medium-model-comparison-report.md  medium-model-tuning-report.md  subtitle-extraction-optimization-report.md
src/: __init__.py  asr_transcriber.py  config.py  main.py  subtitle_export.py  subtitle_extractor.py  translator.py  video_export.py  video_processor.py
src/video_translation_agent/: orchestrator.py  settings.py  store.py  workspace.py
src/video_translation_agent/adapters/: __init__.py  asr.py  media.py  normalization.py  qa.py  render.py  subtitles.py  translation.py  tts.py
src/video_translation_agent/api/: __init__.py  services.py
src/video_translation_agent/cli/: __init__.py  services.py
tests/: __init__.py  test_api_smoke.py  test_asr_adapter.py  test_cli_smoke.py  test_config.py  test_media_adapter.py  test_mvp_documented_flow.py  test_normalization_adapter.py  test_orchestrator.py  test_stages_ingest_caption_normalize.py  test_stages_translate_tts_render_qa.py  test_subtitles_adapter.py  test_workspace.py
(+18 files in other folders)
