[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-translation-agent"
version = "0.1.0"
description = "Local-first video translation and dubbing MVP scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "fastapi>=0.115,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "uvicorn>=0.30,<1.0",
  "argostranslate>=1.11,<2.0",
  "faster-whisper>=1.2,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["video_translation_agent*"]

[tool.setuptools.package-data]
video_translation_agent = ["py.typed", "*.pyi", "**/*.pyi"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "-q"
